--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             srcset="images/pexels-blesson-poulose-240571380-34875486-large-1x.jpg 1x, images/pexels-blesson-poulose-240571380-34875486-large-2x.jpg 2x">
           <source media="(min-width: 768px)"
             srcset="images/pexels-blesson-poulose-240571380-34875486-medium-1x.jpg 1x, images/pexels-blesson-poulose-240571380-34875486-medium-2x.jpg 2x">
-          <img src="images/pexels-blesson-poulose-240571380-34875486-small-1x.jpg" alt="El mono enbobao" loading="lazy">
+          <img
+            srcset="images/pexels-blesson-poulose-240571380-34875486-small-1x.jpg 1x, images/pexels-blesson-poulose-240571380-34875486-small-2x.jpg 2x"
+            alt="El mono enbobao" loading="lazy">
         </picture>
         <div class="gallery-caption">Un mono enbobao</div>
       </div>
@@ -36,8 +38,9 @@
             srcset="images/pexels-efrem-efre-2786187-27778936-large-1x.jpg 1x, images/pexels-efrem-efre-2786187-27778936-large-2x.jpg 2x">
           <source media="(min-width: 768px)"
             srcset="images/pexels-efrem-efre-2786187-27778936-medium-1x.jpg 1x, images/pexels-efrem-efre-2786187-27778936-medium-2x.jpg 2x">
-          <img src="images/pexels-efrem-efre-2786187-27778936-small-1x.jpg" alt="Retrato artístico por Efrem Efre"
-            loading="lazy">
+          <img
+            srcset="images/pexels-efrem-efre-2786187-27778936-small-1x.jpg 1x, images/pexels-efrem-efre-2786187-27778936-small-2x.jpg 2x"
+            alt="Retrato artístico por Efrem Efre" loading="lazy">
         </picture>
         <div class="gallery-caption">Dos coleguitas</div>
       </div>
@@ -50,8 +53,9 @@
             srcset="images/pexels-emilio-sanchez-hernandez-285921208-34893972-large-1x.jpg 1x, images/pexels-emilio-sanchez-hernandez-285921208-34893972-large-2x.jpg 2x">
           <source media="(min-width: 768px)"
             srcset="images/pexels-emilio-sanchez-hernandez-285921208-34893972-medium-1x.jpg 1x, images/pexels-emilio-sanchez-hernandez-285921208-34893972-medium-2x.jpg 2x">
-          <img src="images/pexels-emilio-sanchez-hernandez-285921208-34893972-small-1x.jpg" alt="Bien tranquilo"
-            loading="lazy">
+          <img
+            srcset="images/pexels-emilio-sanchez-hernandez-285921208-34893972-small-1x.jpg 1x, images/pexels-emilio-sanchez-hernandez-285921208-34893972-small-2x.jpg 2x"
+            alt="Bien tranquilo" loading="lazy">
         </picture>
         <div class="gallery-caption">Bien tranquilo</div>
       </div>
@@ -64,7 +68,9 @@
             srcset="images/pexels-florian-kriechbaumer-1479976889-26926253-large-1x.jpg 1x, images/pexels-florian-kriechbaumer-1479976889-26926253-large-2x.jpg 2x">
           <source media="(min-width: 768px)"
             srcset="images/pexels-florian-kriechbaumer-1479976889-26926253-medium-1x.jpg 1x, images/pexels-florian-kriechbaumer-1479976889-26926253-medium-2x.jpg 2x">
-          <img src="images/pexels-florian-kriechbaumer-1479976889-26926253-small-1x.jpg" alt="Que guapo" loading="lazy">
+          <img
+            srcset="images/pexels-florian-kriechbaumer-1479976889-26926253-small-1x.jpg 1x, images/pexels-florian-kriechbaumer-1479976889-26926253-small-2x.jpg 2x"
+            alt="Que guapo" loading="lazy">
         </picture>
         <div class="gallery-caption">Que guapo</div>
       </div>
@@ -77,7 +83,9 @@
             srcset="images/pexels-hartonosbg-34888164-large-1x.jpg 1x, images/pexels-hartonosbg-34888164-large-2x.jpg 2x">
           <source media="(min-width: 768px)"
             srcset="images/pexels-hartonosbg-34888164-medium-1x.jpg 1x, images/pexels-hartonosbg-34888164-medium-2x.jpg 2x">
-          <img src="images/pexels-hartonosbg-34888164-small-1x.jpg" alt="Escena nocturna por Hartono" loading="lazy">
+          <img
+            srcset="images/pexels-hartonosbg-34888164-small-1x.jpg 1x, images/pexels-hartonosbg-34888164-small-2x.jpg 2x"
+            alt="Escena nocturna por Hartono" loading="lazy">
         </picture>
         <div class="gallery-caption">Mirando a la nada pensando en todo</div>
       </div>
@@ -90,7 +98,9 @@
             srcset="images/pexels-mahmutyilmaz-34874631-large-1x.jpg 1x, images/pexels-mahmutyilmaz-34874631-large-2x.jpg 2x">
           <source media="(min-width: 768px)"
             srcset="images/pexels-mahmutyilmaz-34874631-medium-1x.jpg 1x, images/pexels-mahmutyilmaz-34874631-medium-2x.jpg 2x">
-          <img src="images/pexels-mahmutyilmaz-34874631-small-1x.jpg" alt="La familia" loading="lazy">
+          <img
+            srcset="images/pexels-mahmutyilmaz-34874631-small-1x.jpg 1x, images/pexels-mahmutyilmaz-34874631-small-2x.jpg 2x"
+            alt="La familia" loading="lazy">
         </picture>
         <div class="gallery-caption">La familia</div>
       </div>
@@ -103,7 +113,9 @@
             srcset="images/pexels-nicholas-santasier-107116-332153-large-1x.jpg 1x, images/pexels-nicholas-santasier-107116-332153-large-2x.jpg 2x">
           <source media="(min-width: 768px)"
             srcset="images/pexels-nicholas-santasier-107116-332153-medium-1x.jpg 1x, images/pexels-nicholas-santasier-107116-332153-medium-2x.jpg 2x">
-          <img src="images/pexels-nicholas-santasier-107116-332153-small-1x.jpg" alt="Que raros son" loading="lazy">
+          <img
+            srcset="images/pexels-nicholas-santasier-107116-332153-small-1x.jpg 1x, images/pexels-nicholas-santasier-107116-332153-small-2x.jpg 2x"
+            alt="Que raros son" loading="lazy">
         </picture>
         <div class="gallery-caption">Que raros son</div>
       </div>
@@ -116,8 +128,9 @@
             srcset="images/pexels-rodrigo-a-36100054-16945989-large-1x.jpg 1x, images/pexels-rodrigo-a-36100054-16945989-large-2x.jpg 2x">
           <source media="(min-width: 768px)"
             srcset="images/pexels-rodrigo-a-36100054-16945989-medium-1x.jpg 1x, images/pexels-rodrigo-a-36100054-16945989-medium-2x.jpg 2x">
-          <img src="images/pexels-rodrigo-a-36100054-16945989-small-1x.jpg" alt="Calle concurrida por Rodrigo A"
-            loading="lazy">
+          <img
+            srcset="images/pexels-rodrigo-a-36100054-16945989-small-1x.jpg 1x, images/pexels-rodrigo-a-36100054-16945989-small-2x.jpg 2x"
+            alt="Calle concurrida por Rodrigo A" loading="lazy">
         </picture>
         <div class="gallery-caption">Que sexy</div>
       </div>
@@ -130,7 +143,9 @@
             srcset="images/pexels-vo-huy-1470298-2830780-large-1x.jpg 1x, images/pexels-vo-huy-1470298-2830780-large-2x.jpg 2x">
           <source media="(min-width: 768px)"
             srcset="images/pexels-vo-huy-1470298-2830780-medium-1x.jpg 1x, images/pexels-vo-huy-1470298-2830780-medium-2x.jpg 2x">
-          <img src="images/pexels-vo-huy-1470298-2830780-small-1x.jpg" alt="Los brothers" loading="lazy">
+          <img
+            srcset="images/pexels-vo-huy-1470298-2830780-small-1x.jpg 1x, images/pexels-vo-huy-1470298-2830780-small-2x.jpg 2x"
+            alt="Los brothers" loading="lazy">
         </picture>
         <div class="gallery-caption">Los brothers</div>
       </div>
